--- a/_pages/MAE4272.md
+++ b/_pages/MAE4272.md
@@ -11,57 +11,129 @@ permalink: /MAE4272/
 
 ## Project Overview
 
-As part of Cornell's MAE 4272 course, our team designed, analyzed, and tested a small-scale wind turbine blade optimized for maximum torque generation in low Reynolds number conditions (Re ≈ 9,300–21,000). Operating in the Big Blue wind tunnel under a Weibull wind distribution (mean speed 4.6 m/s), the three-bladed rotor faced strict constraints: 6-inch maximum radius, 2-inch maximum chord, 2000 rpm speed limit, and fabrication via SLA printing in Accura 25 material. The design prioritized reliable startup torque over peak aerodynamic efficiency, targeting operation at tip-speed ratio λ = 3 and 900 rpm.
+As part of Cornell's MAE 4272 course, our team designed, analyzed, and tested a small-scale wind turbine blade optimized for maximum torque generation in low Reynolds number conditions (Re ≈ 9,300–21,000). Operating in the Big Blue wind tunnel under a Weibull wind distribution (k=5, c=5 m/s, mean speed 4.6 m/s), the three-bladed rotor faced strict constraints: 6-inch maximum radius, 2-inch maximum chord, 2000 rpm speed limit, and fabrication via SLA printing in Accura 25 material. The design prioritized reliable startup torque over peak aerodynamic efficiency, targeting operation at tip-speed ratio λ = 3 and 900 rpm.
 
 ---
 
-## Design Process
+## Design Philosophy and Approach
 
-We began with statistical analysis of the Weibull wind distribution to establish our operating Reynolds number range, then selected the S1223 airfoil for its exceptional lift characteristics at low Re (CL_max = 1.8-2.0, nearly double that of conventional NACA airfoils). Using blade element momentum theory, we calculated optimal twist distribution ranging from 60° at the root to 14° at the tip to maintain a 3° angle of attack across the span. The chord tapered linearly from 2.0 inches at the root to 0.4 inches at the tip to reduce bending loads while maintaining adequate solidity inboard.
+### Operating Point Selection
 
-MATLAB structural analysis confirmed a critical failure wind speed of 67.73 m/s—more than 10× above our operating range—validating the design's structural adequacy. ANSYS Fluent CFD simulations predicted 11.03 W power output, though CAD-to-CFD workflow challenges required manual airfoil file editing and multi-segment lofting to resolve trailing edge closure issues.
+The design began with statistical analysis of the Weibull wind distribution to establish our operating regime. Using the probability density function p(U) = (k/c)(U/c)^(k-1)exp(-(U/c)^k) with k=5 and c=5 m/s, we determined a mean wind speed of 4.59 m/s with 5th and 95th percentiles at 2.76 and 6.23 m/s. For the maximum allowable chord of 2 inches (0.0508 m) and air kinematic viscosity ν = 1.5×10⁻⁵ m²/s, the Reynolds number spans 9,349–21,088 with Re_mean = 15,548, confirming operation in a low-Re regime where laminar effects dominate.
+
+### Tip-Speed Ratio and Torque Optimization
+
+Tip-speed ratio fundamentally determines the torque-efficiency balance. At high λ (> 6), blades move faster than the wind, creating small angles of attack and aligned lift vectors that produce high efficiency but low torque. At low λ (≈ 2-3), slower blade motion generates larger angles where lift contributes more tangentially to rotational moment. We selected λ = 3 to maintain an effective angle of attack at 6-10° where low-Re airfoils achieve maximum lift-to-drag ratio while rotating the lift vector substantially from the axial direction for strong tangential force. This torque-focused approach accepts lower aerodynamic efficiency in exchange for reliable startup and stable operation in variable wind conditions. From λ = 3, U = 4.59 m/s, and R = 0.152 m, the target speed Ω = λU/R = 94.25 rad/s ≈ 900 rpm provided margin below the 2000 rpm safety limit.
 
 ---
 
-## Testing and Results
+## Airfoil Selection: S1223 Justification
 
-Wind tunnel testing employed progressive loading from 2-10 volts on the magnetic brake to prevent premature stall, allowing full torque characterization at constant wind speeds (3, 5, and 7 m/s). Testing revealed our blade performed significantly better than predicted: maximum power output consistently occurred around 1300 rpm rather than the designed 900 rpm. At 7 m/s with maximum brake loading, the blade operated at only 1300 rpm—well below the 2000 rpm safety limit—and required progressively higher brake torque to stall as wind speed increased, indicating we never reached maximum performance within available test conditions.
+Conventional NACA airfoils perform poorly in low Reynolds number regimes because the boundary layer remains laminar over most of the airfoil surface and cannot withstand adverse pressure gradients, leading to premature separation, reduced lift generation, and increased pressure drag. This led us to investigate specialized low-Re airfoils.
 
-This suggests the blade's aerodynamic capability exceeded both our low-Re design predictions and the tunnel's operational envelope, demonstrating successful torque optimization while maintaining all safety margins.
+We evaluated NACA 4412 and S1223 using XFOIL and published wind tunnel data at Re ≈ 15,000, ultimately selecting S1223 for four critical reasons:
+
+**1. Exceptional Lift Generation:** The S1223 achieves CL_max = 1.8-2.0 at Re = 10,000-20,000, nearly double that of NACA 4412. The S1223 maintains CL > 1.5 from 6-12° angle of attack while NACA 4412 peaks at CL ≈ 1.0. This exceptional lift generation translates directly to higher torque per unit span when projected tangentially through the inflow angle.
+
+![S1223 vs NACA 4412 Lift Comparison](/assets/images/4272/lift_comparison.png)
+*Figure 1: Lift coefficient comparison showing S1223's superior performance at low Reynolds numbers*
+
+**2. Gentle Stall Characteristics:** The S1223 exhibits gentle stall behavior with gradual separation and maintained lift over a broad angle range, ensuring consistent torque during startup and operation outside the design range.
+
+**3. Superior Aerodynamic Efficiency:** The S1223 achieves peak lift-to-drag ratios of 50-60 near α = 3-5°, aligning with blade element theory predictions at λ = 3. The S1223 maintains superior L/D over NACA 4412 from 4-10°, precisely our anticipated operating range.
+
+![Lift-to-Drag Ratio](/assets/images/4272/clovercd.png)
+*Figure 2: Lift-to-drag ratio demonstrating S1223's peak efficiency at α ≈ 3-5°*
+
+**4. Practical Manufacturing Advantages:** The S1223's 12% thickness supplies structural depth at the root while 8-9% camber maintains high-lift characteristics outboard. The pressure distribution helps prevent flow separation at low Reynolds numbers, critical for maintaining performance in our operating regime.
+
+---
+
+## Blade Geometry Design
+
+### Twist Distribution
+
+Using blade element momentum theory, we calculated the local inflow angle φ(r) = arctan(U/(Ωr)) assuming negligible induction. To maintain the optimal angle of attack α_opt ≈ 3° from S1223 data, we set geometric pitch as β(r) = φ(r) - α_opt. This produced the following twist distribution:
+
+- **Root (r/R = 0.25):** β ≈ 55-60°
+- **r/R = 0.40:** β ≈ 36°
+- **Mid-span (r/R = 0.50):** β ≈ 30°
+- **r/R = 0.70:** β ≈ 21°
+- **Near tip (r/R = 0.90):** β ≈ 16°
+
+The extreme root twist angles (r < 0.22R) were blended into the cylindrical hub attachment at the thickest portion of the airfoil, providing maximum cross-sectional area between the airfoil and mounting geometry. This improved printability and structural robustness with minimal loss of aerodynamic performance.
+
+### Chord Taper
+
+The chord distribution employed linear taper from 2.0 inches at the root to 0.4 inches at the tip. This taper maintains higher solidity inboard where tangential velocities are lower, reduces root bending moment by decreasing loads at outboard stations, and provides a structurally sound planform. The resulting aspect ratio of approximately 4.0 (R/c_mean = 6/1.5) balanced aerodynamic efficiency, structural stiffness, and manufacturing feasibility.
+
+![CAD Model](/assets/images/4272/cadmodel.png)
+*Figure 3: Final blade geometry showing twist distribution and chord taper*
+
+---
+
+## Structural Validation
+
+MATLAB scripts computed bending moments along the blade span from distributed aerodynamic loads predicted by blade element theory. Each blade cross-section was modeled as a solid rectangle with thickness t = 0.12c, yielding section modulus Z = bc²/6 where b is the chord.
+
+At the design point (U = 4.59 m/s), the maximum root bending moment was calculated as 0.022 N·m, below both the magnetic brake limit (0.035 N·m) and the material capacity. To determine structural failure wind speed, we applied load scaling analysis: since aerodynamic forces scale approximately with U² at constant λ, the critical wind speed is U_crit = U√(σ_allow/σ_current). Using Accura 25's tensile strength of 38 MPa, the analysis predicted structural failure at 67.73 m/s—more than 10× above the operating range.
+
+![Predicted Torque](/assets/images/4272/speedvstorque.png)
+*Figure 4: Predicted rotor torque vs. wind speed from blade element momentum analysis*
+
+![Root Bending Moment](/assets/images/4272/speedvsrootbend.png)
+*Figure 5: Root bending moment showing critical failure at 67.73 m/s, well above operating conditions*
+
+---
+
+## CFD Analysis
+
+ANSYS Fluent CFD simulations were performed using a 120° wedge geometry with periodic boundary conditions to model blade rotation. We used polyhedral volume mesh elements with hexagonal surface mesh on the blade to capture aerodynamic details while maintaining reasonable computational time. The k-omega turbulence model was selected for low Reynolds number flows.
+
+The simulation predicted 11.03 W power output at design conditions. Pressure contours revealed expected high-pressure regions on the blade front face where flow stagnates, and corresponding low-pressure regions on the back face. This pressure differential creates the moment that drives blade rotation.
+
+![CFD Pressure Contour 1](/assets/images/4272/cfd1.png)
+*Figure 6: ANSYS Fluent pressure distribution on blade front face*
+
+![CFD Pressure Contour 2](/assets/images/4272/cfd2.png)
+*Figure 7: ANSYS Fluent pressure distribution on blade back face showing low-pressure region*
+
+**CAD-to-CFD Challenges:** Initial geometry export issues arose from the finite trailing edge point creating an unclosed STEP file. This required manual editing of the airfoil .dat file to bridge the trailing edge with an arc. The loft could not be solved as a continuous feature, requiring individual lofts between adjacent sections that were merged together, creating minor sharp edges between sections. However, overall geometry largely matched our design and was deemed acceptable for CFD analysis.
+
+---
+
+## Experimental Testing and Results
+
+### Testing Protocol
+
+Wind tunnel testing employed progressive loading from 2-10 volts on the magnetic brake to prevent premature stall, allowing full torque characterization at constant wind speeds (3, 5, and 7 m/s). Initial attempts with abrupt high-torque loading caused immediate stall, but progressive loading enabled higher power output by preventing aerodynamic separation.
+
+### Performance Results
+
+Testing revealed our blade performed significantly better than predicted: maximum power output consistently occurred around 1300 rpm rather than the designed 900 rpm. At 7 m/s with maximum brake loading, the blade operated at only 1300 rpm—well below the 2000 rpm safety limit—and required progressively higher brake torque to stall as wind speed increased. This indicates we never reached maximum performance within the available test constraints.
+
+**Key Finding:** The blade's aerodynamic capability exceeded both our low-Re design predictions and the tunnel's operational envelope. The 900-to-1300 rpm discrepancy suggests that actual aerodynamic performance exceeded low-Re predictions, likely due to transitional flow effects not captured in steady-state BEM analysis. This demonstrates successful torque optimization while maintaining all safety margins.
 
 ---
 
 ## My Contribution
 
-I led the aerodynamic design phase, conducting Reynolds number analysis, performing airfoil selection studies comparing S1223 against NACA 4412, and implementing blade element momentum theory calculations to determine optimal twist and pitch distributions. I developed MATLAB scripts for performance prediction and structural validation, calculating torque outputs across the wind speed range and verifying that bending stresses remained within material limits. Additionally, I coordinated the team's experimental protocol development.
+I led the aerodynamic design phase, conducting Reynolds number analysis through Weibull distribution statistical modeling and performing comprehensive airfoil selection studies comparing S1223 against NACA 4412 using XFOIL data and published wind tunnel results. I implemented blade element momentum theory calculations to determine optimal twist and pitch distributions across the blade span, ensuring the design maintained target angle of attack at each radial station.
+
+I developed MATLAB scripts for performance prediction including torque estimation across the wind speed range, and structural validation scripts that computed bending moments from distributed aerodynamic loads and verified bending stresses remained within Accura 25 material limits. My structural analysis predicted the critical failure wind speed of 67.73 m/s using load scaling relationships. Additionally, I coordinated the team's experimental protocol development, establishing the progressive loading strategy that enabled successful torque characterization without premature stall.
 
 ---
 
-## Project Figures
+## Key Takeaways and Future Work
 
-### Airfoil Performance Comparison
-![S1223 vs NACA 4412 Lift Comparison](/assets/images/4272/lift_comparison.png)
-*Figure 1: Lift coefficient comparison showing S1223's superior performance at low Reynolds numbers*
+This project demonstrated successful integration of aerodynamic theory, computational analysis, and experimental validation for low Reynolds number applications. The blade exceeded design performance expectations, validating our torque-first optimization strategy. However, several areas offer opportunities for improvement:
 
-![S1223 vs NACA 4412 Efficiency](/assets/images/4272/efficiency_comparison.png)
-*Figure 2: Lift-to-drag ratio demonstrating S1223's peak efficiency at α ≈ 3-5°*
+**Design Refinements:** Future iterations should optimize for the 1200-1400 rpm range observed in testing rather than the originally designed 900 rpm, reflecting actual aerodynamic performance capabilities.
 
-### CAD Model and Manufacturing
-![Blade CAD Model](/assets/images/4272/cad_model.png)
-*Figure 3: Final blade geometry showing twist distribution and chord taper*
+**Improved Modeling:** Better prediction of transitional Reynolds number behavior through enhanced CFD mesh quality and boundary conditions would improve design accuracy. Three-dimensional BEM models with dynamic induction effects would provide more accurate performance predictions than the simplified steady-state analysis used.
 
-![Printed Blade](/assets/images/4272/printed_blade.png)
-*Figure 4: SLA-printed blade in Accura 25 mounted for wind tunnel testing*
+**Manufacturing Quality:** Eliminating CAD export errors and improving trailing edge geometry definition would ensure better geometric fidelity between design and manufactured blades. The manual .dat file editing required could be avoided with improved CAD modeling techniques.
 
-### Analysis Results
-![Torque Prediction](/assets/images/4272/torque_prediction.png)
-*Figure 5: Predicted rotor torque vs. wind speed from blade element momentum analysis*
+**Extended Testing:** Expanding testing to higher wind speeds would fully characterize maximum performance and validate the blade's true operating envelope beyond the tunnel's current limitations.
 
-![CFD Pressure Contour](/assets/images/4272/pressure_contour.png)
-*Figure 6: ANSYS Fluent pressure distribution showing high-pressure regions driving blade rotation*
-
----
-
-## Key Takeaways
-
-This project demonstrated successful integration of aerodynamic theory, computational analysis, and experimental validation for low Reynolds number applications. The blade exceeded design performance expectations, validating our torque-first optimization strategy while highlighting opportunities for improved low-Re flow modeling and CFD prediction accuracy in future iterations.
+The project successfully achieved its primary objective of torque-optimized operation while satisfying all geometric, material, and safety constraints, demonstrating that specialized low-Reynolds-number airfoils can significantly outperform conventional profiles in small-scale wind turbine applications.
