--- a/_pages/MAE4272.md
+++ b/_pages/MAE4272.md
@@ -5,7 +5,7 @@ permalink: /MAE4272/
 ---
 
 # Small-Scale Wind Turbine Blade Design
-**MAE 4272: Fluids and Heat Transfer Laboratory** | Team: Matt Bulger, Sarah Grace Brown, Marco Conte, Joshua McCrae | Fall 2025
+**MAE 4272: Fluids and Heat Transfer Laboratory** | Team: Matt Bulger, Sarah Grace Brown, Marco Conte, Joshua McCrae | Fall 2024
 
 ---
 
@@ -35,14 +35,14 @@ We evaluated NACA 4412 and S1223 using XFOIL and published wind tunnel data at R
 
 **1. Exceptional Lift Generation:** The S1223 achieves CL_max = 1.8-2.0 at Re = 10,000-20,000, nearly double that of NACA 4412. The S1223 maintains CL > 1.5 from 6-12° angle of attack while NACA 4412 peaks at CL ≈ 1.0. This exceptional lift generation translates directly to higher torque per unit span when projected tangentially through the inflow angle.
 
-![S1223 vs NACA 4412 Lift Comparison](/assets/images/4272/lift_comparison.png)
+![S1223 vs NACA 4412 Lift Comparison](/assets/images/lift_comparison.png)
 *Figure 1: Lift coefficient comparison showing S1223's superior performance at low Reynolds numbers*
 
 **2. Gentle Stall Characteristics:** The S1223 exhibits gentle stall behavior with gradual separation and maintained lift over a broad angle range, ensuring consistent torque during startup and operation outside the design range.
 
 **3. Superior Aerodynamic Efficiency:** The S1223 achieves peak lift-to-drag ratios of 50-60 near α = 3-5°, aligning with blade element theory predictions at λ = 3. The S1223 maintains superior L/D over NACA 4412 from 4-10°, precisely our anticipated operating range.
 
-![Lift-to-Drag Ratio](/assets/images/4272/clovercd.png)
+![Lift-to-Drag Ratio](/assets/images/clovercd.png)
 *Figure 2: Lift-to-drag ratio demonstrating S1223's peak efficiency at α ≈ 3-5°*
 
 **4. Practical Manufacturing Advantages:** The S1223's 12% thickness supplies structural depth at the root while 8-9% camber maintains high-lift characteristics outboard. The pressure distribution helps prevent flow separation at low Reynolds numbers, critical for maintaining performance in our operating regime.
@@ -67,7 +67,7 @@ The extreme root twist angles (r < 0.22R) were blended into the cylindrical hub 
 
 The chord distribution employed linear taper from 2.0 inches at the root to 0.4 inches at the tip. This taper maintains higher solidity inboard where tangential velocities are lower, reduces root bending moment by decreasing loads at outboard stations, and provides a structurally sound planform. The resulting aspect ratio of approximately 4.0 (R/c_mean = 6/1.5) balanced aerodynamic efficiency, structural stiffness, and manufacturing feasibility.
 
-![CAD Model](/assets/images/4272/cadmodel.png)
+![CAD Model](/assets/images/cadmodel.png)
 *Figure 3: Final blade geometry showing twist distribution and chord taper*
 
 ---
@@ -78,10 +78,10 @@ MATLAB scripts computed bending moments along the blade span from distributed ae
 
 At the design point (U = 4.59 m/s), the maximum root bending moment was calculated as 0.022 N·m, below both the magnetic brake limit (0.035 N·m) and the material capacity. To determine structural failure wind speed, we applied load scaling analysis: since aerodynamic forces scale approximately with U² at constant λ, the critical wind speed is U_crit = U√(σ_allow/σ_current). Using Accura 25's tensile strength of 38 MPa, the analysis predicted structural failure at 67.73 m/s—more than 10× above the operating range.
 
-![Predicted Torque](/assets/images/4272/speedvstorque.png)
+![Predicted Torque](/assets/images/speedvstorque.png)
 *Figure 4: Predicted rotor torque vs. wind speed from blade element momentum analysis*
 
-![Root Bending Moment](/assets/images/4272/speedvsrootbend.png)
+![Root Bending Moment](/assets/images/speedvsrootbend.png)
 *Figure 5: Root bending moment showing critical failure at 67.73 m/s, well above operating conditions*
 
 ---
@@ -92,10 +92,10 @@ ANSYS Fluent CFD simulations were performed using a 120° wedge geometry with pe
 
 The simulation predicted 11.03 W power output at design conditions. Pressure contours revealed expected high-pressure regions on the blade front face where flow stagnates, and corresponding low-pressure regions on the back face. This pressure differential creates the moment that drives blade rotation.
 
-![CFD Pressure Contour 1](/assets/images/4272/cfd1.png)
+![CFD Pressure Contour 1](/assets/images/cfd1.png)
 *Figure 6: ANSYS Fluent pressure distribution on blade front face*
 
-![CFD Pressure Contour 2](/assets/images/4272/cfd2.png)
+![CFD Pressure Contour 2](/assets/images/cfd2.png)
 *Figure 7: ANSYS Fluent pressure distribution on blade back face showing low-pressure region*
 
 **CAD-to-CFD Challenges:** Initial geometry export issues arose from the finite trailing edge point creating an unclosed STEP file. This required manual editing of the airfoil .dat file to bridge the trailing edge with an arc. The loft could not be solved as a continuous feature, requiring individual lofts between adjacent sections that were merged together, creating minor sharp edges between sections. However, overall geometry largely matched our design and was deemed acceptable for CFD analysis.
