--- a/_pages/MAE4272.md
+++ b/_pages/MAE4272.md
@@ -36,6 +36,7 @@ We evaluated NACA 4412 and S1223 using XFOIL and published wind tunnel data at R
 **1. Exceptional Lift Generation:** The S1223 achieves CL_max = 1.8-2.0 at Re = 10,000-20,000, nearly double that of NACA 4412. The S1223 maintains CL > 1.5 from 6-12° angle of attack while NACA 4412 peaks at CL ≈ 1.0. This exceptional lift generation translates directly to higher torque per unit span when projected tangentially through the inflow angle.
 
 ![S1223 vs NACA 4412 Lift Comparison](https://cornell-mae-ug.github.io/spring-2025-portfolio-sgb1443/assets/images/lift_comparison.png)
+
 *Figure 1: Lift coefficient comparison showing S1223's superior performance at low Reynolds numbers*
 
 **2. Gentle Stall Characteristics:** The S1223 exhibits gentle stall behavior with gradual separation and maintained lift over a broad angle range, ensuring consistent torque during startup and operation outside the design range.
@@ -43,6 +44,7 @@ We evaluated NACA 4412 and S1223 using XFOIL and published wind tunnel data at R
 **3. Superior Aerodynamic Efficiency:** The S1223 achieves peak lift-to-drag ratios of 50-60 near α = 3-5°, aligning with blade element theory predictions at λ = 3. The S1223 maintains superior L/D over NACA 4412 from 4-10°, precisely our anticipated operating range.
 
 ![Lift-to-Drag Ratio](https://cornell-mae-ug.github.io/spring-2025-portfolio-sgb1443/assets/images/clovercd.png)
+
 *Figure 2: Lift-to-drag ratio demonstrating S1223's peak efficiency at α ≈ 3-5°*
 
 **4. Practical Manufacturing Advantages:** The S1223's 12% thickness supplies structural depth at the root while 8-9% camber maintains high-lift characteristics outboard. The pressure distribution helps prevent flow separation at low Reynolds numbers, critical for maintaining performance in our operating regime.
@@ -68,6 +70,7 @@ The extreme root twist angles (r < 0.22R) were blended into the cylindrical hub 
 The chord distribution employed linear taper from 2.0 inches at the root to 0.4 inches at the tip. This taper maintains higher solidity inboard where tangential velocities are lower, reduces root bending moment by decreasing loads at outboard stations, and provides a structurally sound planform. The resulting aspect ratio of approximately 4.0 (R/c_mean = 6/1.5) balanced aerodynamic efficiency, structural stiffness, and manufacturing feasibility.
 
 ![CAD Model](https://cornell-mae-ug.github.io/spring-2025-portfolio-sgb1443/assets/images/cadmodel.png)
+
 *Figure 3: Final blade geometry showing twist distribution and chord taper*
 
 ---
@@ -79,9 +82,11 @@ MATLAB scripts computed bending moments along the blade span from distributed ae
 At the design point (U = 4.59 m/s), the maximum root bending moment was calculated as 0.022 N·m, below both the magnetic brake limit (0.035 N·m) and the material capacity. To determine structural failure wind speed, we applied load scaling analysis: since aerodynamic forces scale approximately with U² at constant λ, the critical wind speed is U_crit = U√(σ_allow/σ_current). Using Accura 25's tensile strength of 38 MPa, the analysis predicted structural failure at 67.73 m/s—more than 10× above the operating range.
 
 ![Predicted Torque](https://cornell-mae-ug.github.io/spring-2025-portfolio-sgb1443/assets/images/speedvstorque.png)
+
 *Figure 4: Predicted rotor torque vs. wind speed from blade element momentum analysis*
 
 ![Root Bending Moment](https://cornell-mae-ug.github.io/spring-2025-portfolio-sgb1443/assets/images/speedvsrootbend.png)
+
 *Figure 5: Root bending moment showing critical failure at 67.73 m/s, well above operating conditions*
 
 ---
@@ -93,9 +98,11 @@ ANSYS Fluent CFD simulations were performed using a 120° wedge geometry with pe
 The simulation predicted 11.03 W power output at design conditions. Pressure contours revealed expected high-pressure regions on the blade front face where flow stagnates, and corresponding low-pressure regions on the back face. This pressure differential creates the moment that drives blade rotation.
 
 ![CFD Pressure Contour 1](https://cornell-mae-ug.github.io/spring-2025-portfolio-sgb1443/assets/images/cfd1.png)
+
 *Figure 6: ANSYS Fluent pressure distribution on blade front face*
 
 ![CFD Pressure Contour 2](https://cornell-mae-ug.github.io/spring-2025-portfolio-sgb1443/assets/images/cfd2.png)
+
 *Figure 7: ANSYS Fluent pressure distribution on blade back face showing low-pressure region*
 
 **CAD-to-CFD Challenges:** Initial geometry export issues arose from the finite trailing edge point creating an unclosed STEP file. This required manual editing of the airfoil .dat file to bridge the trailing edge with an arc. The loft could not be solved as a continuous feature, requiring individual lofts between adjacent sections that were merged together, creating minor sharp edges between sections. However, overall geometry largely matched our design and was deemed acceptable for CFD analysis.
@@ -110,30 +117,4 @@ Wind tunnel testing employed progressive loading from 2-10 volts on the magnetic
 
 ### Performance Results
 
-Testing revealed our blade performed significantly better than predicted: maximum power output consistently occurred around 1300 rpm rather than the designed 900 rpm. At 7 m/s with maximum brake loading, the blade operated at only 1300 rpm—well below the 2000 rpm safety limit—and required progressively higher brake torque to stall as wind speed increased. This indicates we never reached maximum performance within the available test constraints.
-
-**Key Finding:** The blade's aerodynamic capability exceeded both our low-Re design predictions and the tunnel's operational envelope. The 900-to-1300 rpm discrepancy suggests that actual aerodynamic performance exceeded low-Re predictions, likely due to transitional flow effects not captured in steady-state BEM analysis. This demonstrates successful torque optimization while maintaining all safety margins.
-
----
-
-## My Contribution
-
-I led the aerodynamic design phase, conducting Reynolds number analysis through Weibull distribution statistical modeling and performing comprehensive airfoil selection studies comparing S1223 against NACA 4412 using XFOIL data and published wind tunnel results. I implemented blade element momentum theory calculations to determine optimal twist and pitch distributions across the blade span, ensuring the design maintained target angle of attack at each radial station.
-
-I developed MATLAB scripts for performance prediction including torque estimation across the wind speed range, and structural validation scripts that computed bending moments from distributed aerodynamic loads and verified bending stresses remained within Accura 25 material limits. My structural analysis predicted the critical failure wind speed of 67.73 m/s using load scaling relationships. Additionally, I coordinated the team's experimental protocol development, establishing the progressive loading strategy that enabled successful torque characterization without premature stall.
-
----
-
-## Key Takeaways and Future Work
-
-This project demonstrated successful integration of aerodynamic theory, computational analysis, and experimental validation for low Reynolds number applications. The blade exceeded design performance expectations, validating our torque-first optimization strategy. However, several areas offer opportunities for improvement:
-
-**Design Refinements:** Future iterations should optimize for the 1200-1400 rpm range observed in testing rather than the originally designed 900 rpm, reflecting actual aerodynamic performance capabilities.
-
-**Improved Modeling:** Better prediction of transitional Reynolds number behavior through enhanced CFD mesh quality and boundary conditions would improve design accuracy. Three-dimensional BEM models with dynamic induction effects would provide more accurate performance predictions than the simplified steady-state analysis used.
-
-**Manufacturing Quality:** Eliminating CAD export errors and improving trailing edge geometry definition would ensure better geometric fidelity between design and manufactured blades. The manual .dat file editing required could be avoided with improved CAD modeling techniques.
-
-**Extended Testing:** Expanding testing to higher wind speeds would fully characterize maximum performance and validate the blade's true operating envelope beyond the tunnel's current limitations.
-
-The project successfully achieved its primary objective of torque-optimized operation while satisfying all geometric, material, and safety constraints, demonstrating that specialized low-Reynolds-number airfoils can significantly outperform conventional profiles in small-scale wind turbine applications.
+Testing revealed our blade performed significantly better than predicted: maximum power output consistently occurred around 1300 rpm rather than the designed 900 rpm. At 7 m/s with maximum brake loadi
