Revise MAE4272 content for clarity and detail
Updated figures and descriptions for clarity and detail, including specific mentions of geometry and performance results. Added contributions and key takeaways for future work.

--- a/_pages/MAE4272.md
+++ b/_pages/MAE4272.md
@@ -71,7 +71,7 @@ The chord distribution employed linear taper from 2.0 inches at the root to 0.4 
 
 ![CAD Model](https://cornell-mae-ug.github.io/spring-2025-portfolio-sgb1443/assets/images/cadmodel.png)
 
-*Figure 3: Final blade geometry showing twist distribution and chord taper*
+*Figure 3: Final blade geometry showing twist distribution and chord taper with segmented loft structure*
 
 ---
 
@@ -99,13 +99,13 @@ The simulation predicted 11.03 W power output at design conditions. Pressure con
 
 ![CFD Pressure Contour 1](https://cornell-mae-ug.github.io/spring-2025-portfolio-sgb1443/assets/images/cfd1.png)
 
-*Figure 6: ANSYS Fluent pressure distribution on blade front face*
+*Figure 6: ANSYS Fluent pressure distribution on blade front face showing high-pressure stagnation region*
 
 ![CFD Pressure Contour 2](https://cornell-mae-ug.github.io/spring-2025-portfolio-sgb1443/assets/images/cfd2.png)
 
-*Figure 7: ANSYS Fluent pressure distribution on blade back face showing low-pressure region*
+*Figure 7: ANSYS Fluent pressure distribution on blade back face showing low-pressure region driving rotation*
 
-**CAD-to-CFD Challenges:** Initial geometry export issues arose from the finite trailing edge point creating an unclosed STEP file. This required manual editing of the airfoil .dat file to bridge the trailing edge with an arc. The loft could not be solved as a continuous feature, requiring individual lofts between adjacent sections that were merged together, creating minor sharp edges between sections. However, overall geometry largely matched our design and was deemed acceptable for CFD analysis.
+**CAD-to-CFD Challenges:** Initial geometry export issues arose from the finite trailing edge point creating an unclosed STEP file. This required manual editing of the airfoil .dat file to bridge the trailing edge with an arc. The loft could not be solved as a continuous feature, requiring individual lofts between adjacent sections that were merged together, creating minor sharp edges between sections visible in Figure 3. However, overall geometry largely matched our design and was deemed acceptable for CFD analysis.
 
 ---
 
@@ -117,4 +117,30 @@ Wind tunnel testing employed progressive loading from 2-10 volts on the magnetic
 
 ### Performance Results
 
-Testing revealed our blade performed significantly better than predicted: maximum power output consistently occurred around 1300 rpm rather than the designed 900 rpm. At 7 m/s with maximum brake loadi
+Testing revealed our blade performed significantly better than predicted: maximum power output consistently occurred around 1300 rpm rather than the designed 900 rpm. At 7 m/s with maximum brake loading, the blade operated at only 1300 rpm—well below the 2000 rpm safety limit—and required progressively higher brake torque to stall as wind speed increased. This indicates we never reached maximum performance within the available test constraints.
+
+**Key Finding:** The blade's aerodynamic capability exceeded both our low-Re design predictions and the tunnel's operational envelope. The 900-to-1300 rpm discrepancy suggests that actual aerodynamic performance exceeded low-Re predictions, likely due to transitional flow effects not captured in steady-state BEM analysis. This demonstrates successful torque optimization while maintaining all safety margins.
+
+---
+
+## My Contribution
+
+I led the aerodynamic design phase, conducting Reynolds number analysis through Weibull distribution statistical modeling and performing comprehensive airfoil selection studies comparing S1223 against NACA 4412 using XFOIL data and published wind tunnel results. I implemented blade element momentum theory calculations to determine optimal twist and pitch distributions across the blade span, ensuring the design maintained target angle of attack at each radial station.
+
+I developed MATLAB scripts for performance prediction including torque estimation across the wind speed range, and structural validation scripts that computed bending moments from distributed aerodynamic loads and verified bending stresses remained within Accura 25 material limits. My structural analysis predicted the critical failure wind speed of 67.73 m/s using load scaling relationships. Additionally, I coordinated the team's experimental protocol development, establishing the progressive loading strategy that enabled successful torque characterization without premature stall.
+
+---
+
+## Key Takeaways and Future Work
+
+This project demonstrated successful integration of aerodynamic theory, computational analysis, and experimental validation for low Reynolds number applications. The blade exceeded design performance expectations, validating our torque-first optimization strategy. However, several areas offer opportunities for improvement:
+
+**Design Refinements:** Future iterations should optimize for the 1200-1400 rpm range observed in testing rather than the originally designed 900 rpm, reflecting actual aerodynamic performance capabilities.
+
+**Improved Modeling:** Better prediction of transitional Reynolds number behavior through enhanced CFD mesh quality and boundary conditions would improve design accuracy. Three-dimensional BEM models with dynamic induction effects would provide more accurate performance predictions than the simplified steady-state analysis used.
+
+**Manufacturing Quality:** Eliminating CAD export errors and improving trailing edge geometry definition would ensure better geometric fidelity between design and manufactured blades. The manual .dat file editing required could be avoided with improved CAD modeling techniques.
+
+**Extended Testing:** Expanding testing to higher wind speeds would fully characterize maximum performance and validate the blade's true operating envelope beyond the tunnel's current limitations.
+
+The project successfully achieved its primary objective of torque-optimized operation while satisfying all geometric, material, and safety constraints, demonstrating that specialized low-Reynolds-number airfoils can significantly outperform conventional profiles in small-scale wind turbine applications.
