Enhance contribution section with additional details
Expanded contribution details by adding information on experimental protocol development and structural analysis.

--- a/_pages/MAE4272.md
+++ b/_pages/MAE4272.md
@@ -125,9 +125,7 @@ Testing revealed our blade performed significantly better than predicted: maximu
 
 ## My Contribution
 
-I led the aerodynamic design phase, conducting Reynolds number analysis through Weibull distribution statistical modeling and performing comprehensive airfoil selection studies comparing S1223 against NACA 4412 using XFOIL data and published wind tunnel results. I implemented blade element momentum theory calculations to determine optimal twist and pitch distributions across the blade span, ensuring the design maintained target angle of attack at each radial station.
-
-I developed MATLAB scripts for performance prediction including torque estimation across the wind speed range, and structural validation scripts that computed bending moments from distributed aerodynamic loads and verified bending stresses remained within Accura 25 material limits. My structural analysis predicted the critical failure wind speed of 67.73 m/s using load scaling relationships. Additionally, I coordinated the team's experimental protocol development, establishing the progressive loading strategy that enabled successful torque characterization without premature stall.
+I led the aerodynamic design phase, conducting Reynolds number analysis through Weibull distribution statistical modeling and performing comprehensive airfoil selection studies comparing S1223 against NACA 4412 using XFOIL data and published wind tunnel results. I implemented blade element momentum theory calculations to determine optimal twist and pitch distributions across the blade span, ensuring the design maintained target angle of attack at each radial station. Additionally, I coordinated the team's experimental protocol development, establishing the progressive loading strategy that enabled successful torque characterization without premature stall.
 
 ---
 
